# distributed-llm-inference

./: .gitignore  README.md  pyproject.toml
distributed_llm_inference/models/: llama.py
distributed_llm_inference/models/llama/: cache.py  model.py  modules.py
distributed_llm_inference/server/: backend.py  load_blocks.py  partial_llama.py  server.py  task_pool.py  worker.py
distributed_llm_inference/utils/: cuda.py  model.py
